# pymol-open-source-windows-build

./: .gitignore  CMakeLists.txt  COMMON_TASKS  MANIFEST.in  NoteForMe  README.md  meson.build  pyproject.toml  requirements.txt  run_automation.py  setup.py  setup_dev_env.bat  setup_dev_env.sh  taskfile.yaml  vcpkg.json
alternative_design/: NOTE
alternative_design/pptx/: alt_splash_image.pptx
edited/pmg_qt/: pymol_qt_gui.py
edited/pymol/: __init__.py
edited/pymol/data/pymol/: base.css
includes/: H5pubconf.h
includes/freetype/config/: public-macros.h
includes/tnt/: tnt_matrix.h
libx64/: aec-static.lib  brotlicommon.lib  brotlidec.lib  bz2.lib  glew32.lib  libhdf5.settings  libhdf5_hl.lib  libnetcdf.settings  libpng16.lib  libxml2.lib  szip-static.lib  zlib.lib
scripts/: convert_pymol_png_to_ico.bat
scripts/batch/: convert_pymol_png_to_ico.bat
scripts/python/: build_win_exe.py  create_generated_files.py
