[project]
name = "pymol"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.3"
license = {file = "LICENSE"}
#description = """
#PyMOL is a Python-enhanced molecular graphics tool.
#It excels at 3D visualization of proteins, small molecules, density,
#surfaces, and trajectories. It also includes molecular editing,
#ray tracing, and movies. Open Source PyMOL is free to everyone!
#"""
authors = [
    {name = "Schrodinger", email = "pymol-users@lists.sourceforge.net"},
    {name = "Martin Urban",email = "martin.urban@studmail.w-hs.de"}
]

[build-system]
requires = ["setuptools", "numpy==1.26.4", "toml"]
build-backend = "setuptools.build_meta"

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["PyQt5"]

[project.urls]
Homepage = "https://pymol.org"
Documentation = "https://pymol.org/dokuwiki"
Repository = "https://github.com/schrodinger/pymol-open-source"
"Bug Tracker" = "https://github.com/schrodinger/pymol-open-source/issues"
Changelog = "https://github.com/schrodinger/pymol-open-source/blob/master/ChangeLog"

[project.scripts]
pymol = "pymol:launch"
